--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-passed">Default suite</span>
+              <span class="suite-name border-failed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\jinka\AppData\Local\Temp\testng-eclipse-1358961988\testng-customsuite.xml</span>
+                    <span>C:\Users\jinka\AppData\Local\Temp\testng-eclipse--1026223824\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,31 +92,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
                     </span>
-                    <div class="method-list-content passed suite-Default_suite">
+                    <div class="method-list-content failed suite-Default_suite">
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="cucumberoptions.TestNgTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Search experience for product search in both home and offer page&quot;, &quot;Search and place the order for ...)">runScenario("Search experience for product search in both home and offer page", "Search and place the order for ...)</a> <!-- method navigator-link -->
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="cucumberoptions.TestNgTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Flight Booking feature checking&quot;, &quot;Git Practice&quot;)">runScenario("Flight Booking feature checking", "Git Practice")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="cucumberoptions.TestNgTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Search experience for product search in both home and offer page&quot;, &quot;Search and place the order for ...)">runScenario("Search experience for product search in both home and offer page", "Search and place the order for ...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="cucumberoptions.TestNgTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Search experience for product search in both home and offer page&quot;, &quot;Search and place the order for ...)">runScenario("Search experience for product search in both home and offer page", "Search and place the order for ...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
+                    </div> <!-- method-list-content failed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -128,48 +118,37 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-passed">
+          <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">cucumberoptions.TestNgTestRunner</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Search experience for product search in both home and offer page&quot;, &quot;Search and place the order for ...)">
-                  </a> <!-- runScenario("Search experience for product search in both home and offer page", "Search and place the order for ...) -->
+                  <a name="runScenario(&quot;Flight Booking feature checking&quot;, &quot;Git Practice&quot;)">
+                  </a> <!-- runScenario("Flight Booking feature checking", "Git Practice") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Search experience for product search in both home and offer page","Search and place the order for products")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Search experience for product search in both home and offer page&quot;, &quot;Search and place the order for ...)">
-                  </a> <!-- runScenario("Search experience for product search in both home and offer page", "Search and place the order for ...) -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Search experience for product search in both home and offer page","Search and place the order for products")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Search experience for product search in both home and offer page&quot;, &quot;Search and place the order for ...)">
-                  </a> <!-- runScenario("Search experience for product search in both home and offer page", "Search and place the order for ...) -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Search experience for product search in both home and offer page","Search and place the order for products")</span>
+                  <span class="parameters">("Flight Booking feature checking","Git Practice")</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
+	at org.testng.Assert.fail(Assert.java:110)
+	at org.testng.Assert.failNotEquals(Assert.java:1413)
+	at org.testng.Assert.assertTrue(Assert.java:56)
+	at org.testng.Assert.assertTrue(Assert.java:66)
+	at stepDefination.GitPracticeStepDefination.user_moved_to_flight_booking_page(GitPracticeStepDefination.java:21)
+	at ✽.User moved to Flight Booking page(file:///C:/Users/jinka/GitStuff/src/test/java/features/gitpractice.feature:7)
+
+</div> <!-- stack-trace -->
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
+          </div> <!-- suite-Default_suite-class-failed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\jinka\AppData\Local\Temp\testng-eclipse-1358961988\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\jinka\AppData\Local\Temp\testng-eclipse--1026223824\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -226,24 +205,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'cucumberoptions.TestNgTestRunner')
-data.setCell(0, 3, 15149);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'runScenario')
-data.setCell(1, 2, 'cucumberoptions.TestNgTestRunner')
-data.setCell(1, 3, 15046);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'runScenario')
-data.setCell(2, 2, 'cucumberoptions.TestNgTestRunner')
-data.setCell(2, 3, 15046);
+data.setCell(0, 3, 5426);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 45 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -271,24 +242,18 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">cucumberoptions.TestNgTestRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@6c8909c3)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@56ac5c80)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Search experience for product search in both home and offer page", "Search and place the order for ...)</span>
-                <span class="method-start">1064 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("Search experience for product search in both home and offer page", "Search and place the order for ...)</span>
-                <span class="method-start">1064 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("Search experience for product search in both home and offer page", "Search and place the order for ...)</span>
-                <span class="method-start">1064 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">runScenario("Flight Booking feature checking", "Git Practice")</span>
+                <span class="method-start">737 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">16216 ms</span>
+                <span class="method-start">6167 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
